After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692251 - goa kerberos provider fails to build with gcc-4.5 due to GoaKerberosIdentity redefinition
goa kerberos provider fails to build with gcc-4.5 due to GoaKerberosIdentity ...
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Kerberos
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-01-22 04:58 UTC by Alexandre Rostovtsev
Modified: 2013-01-29 16:29 UTC
See Also:
GNOME target: ---
GNOME version: 3.5/3.6


Attachments
proposed patch (2.38 KB, patch)
2013-01-22 05:11 UTC, Alexandre Rostovtsev
committed Details | Review

Description Alexandre Rostovtsev 2013-01-22 04:58:47 UTC
When trying to build gnome-online-accounts-3.6.2 with --enable-kerberos using gcc-4.5:

In file included from goaidentityenumtypes.c:106:0:
goakerberosidentity.h:39:37: error: redefinition of typedef 'GoaKerberosIdentity'
goakerberosidentityinquiry.h:41:37: note: previous declaration of 'GoaKerberosIdentity' was here

Later versions of gcc can deal with this redefinition. However, IMHO redefining GoaKerberosIdentity - and in fact, the whole design of goakerberosidentity.h and goakerberosidentityinquiry.h that forces them to include each other and then define GoaKerberosIdentity in two places - is not an example of good style.
Comment 1 Alexandre Rostovtsev 2013-01-22 05:11:50 UTC
Created attachment 234066 [details] [review]
proposed patch
Comment 2 Debarshi Ray 2013-01-29 16:29:37 UTC
Thanks for the patch!