identity: Define GoaKerberosIdentity only in one header

https://bugzilla.gnome.org/show_bug.cgi?id=692251